--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -1,4 +1,14 @@
 ==============================================================================
+Changes in dlnm 1.4.1
+=======================
+
+Minor changes
+-------------
+
+    o	Reference added in vignette, citation and help pages.
+
+
+==============================================================================
 Changes in dlnm 1.4.0
 =======================
 
