--- a/inst/doc/biblioVignette.bib
+++ b/inst/doc/biblioVignette.bib
@@ -56,6 +56,17 @@
   number = {1}
 }
 
+@ARTICLE{gasparrini2011jss,
+  author = {Gasparrini, A.},
+  title = {{Distributed lag linear and non-linear models in R: the package dlnm}},
+  journal = {Journal of Statistical Software},
+  year = {2011},
+  volume = {43},
+  pages = {1-20},
+  number = {8},
+  url = {http://www.jstatsoft.org/v43/i08/}
+}
+
 @ARTICLE{gasparrini2010statmed,
   author = {Gasparrini, A. and Armstrong, B. and Kenward, M. G.},
   title = {{Distributed lag non-linear models}},
