--- a/inst/doc/biblioVignette.bib
+++ b/inst/doc/biblioVignette.bib
@@ -1,4 +1,4 @@
-% This file was created with JabRef 2.6.
+% This file was created with JabRef 2.7.2.
 % Encoding: Cp1252
 
 @ARTICLE{almon1965,
@@ -65,6 +65,14 @@
   pages = {1-20},
   number = {8},
   url = {http://www.jstatsoft.org/v43/i08/}
+}
+
+@ARTICLE{gasparrini2012biostat,
+  author = {Gasparrini, A. and Armstrong, B. and Kenward, M. G.},
+  title = {{Reducing and meta-analyzing estimates from distributed lag non-linear
+	models}},
+  year = {2012},
+  number = {Submitted}
 }
 
 @ARTICLE{gasparrini2010statmed,
