--- a/inst/doc/dlnmOverview.Rnw
+++ b/inst/doc/dlnmOverview.Rnw
@@ -148,13 +148,13 @@ Following the general approach used in Section~\ref{sec:basis}, it may be shown 
 
 A general approach to specify non-linear but un-lagged effects has been introduced in Section~\ref{sec:basis}, while the methods to define distributed lag functions for simple linear effects have been presented in Section~\ref{sec:delayed}. An obvious extensions is to combine these approaches to define distributed lag non-linear models (DLNM's), a family of models which can deal at the same time with non-linear and delayed effects.
 
-The different issues of non-linearity and delayed effects share a common feature: in both cases the solution is to choose a basis to describe the shape of the relationship in the related dimension. This step leads to the concept of \emph{cross-basis}: following the idea of basis in \ref{sec:basis}, a cross-basis  can be imagined as a bi-dimensional space of functions describing on the same time the shape of the relationship and the distributed lag effects. The algebraic notation to define the cross-basis and then the DLNM can be quite complex, involving tensor products of 3-dimensional arrays, and has been presented elsewhere \citep[Section~4.2]{gasparrini2010statmed}. Nonetheless, the basic concept is straightforward: choosing a cross-basis amounts to choosing two independent set of basis functions, which will be combined to generate the specific cross-basis functions. The DLM's described in \ref{sec:delayed} can be considered as special cases of DLNM's with a simple linear function in the dimension of the predictor.
+The different issues of non-linearity and delayed effects share a common feature: in both cases the solution is to choose a basis to describe the shape of the relationship in the related dimension. This step leads to the concept of \emph{cross-basis}: following the idea of basis in \ref{sec:basis}, a cross-basis  can be imagined as a bi-dimensional space of functions describing on the same time the shape of the relationship and the distributed lag effects. The algebraic notation to define the cross-basis and then the DLNM can be quite complex, involving tensor products of 3-dimensional arrays, and has been presented elsewhere \citep[Section~4.2]{gasparrini2010statmed}. Nonetheless, the basic concept is straightforward: choosing a cross-basis amounts to choosing two independent sets of basis functions, which will be combined to generate the specific cross-basis functions. The DLM's described in \ref{sec:delayed} can be considered as special cases of DLNM's with a simple linear function in the dimension of the predictor.
 
 The result of a DLNM can be interpreted by building a grid of predictions for each lag and for suitable values of the predictor, using three dimensional plots to provide an overall picture of the effects varying along the two dimensions. In addition, it is possible to summarize the effects for single predictor levels or lags, simply cutting a "slice" of the grid along specific values. These summaries are defined lag-specific association, including the effects along the predictor space for a given lag value, and predictor-specific association, including the effects along lags for a given predictor values, respectively. Finally, an estimate of the overall effect can be computed by summing all the contributions at different lags for each predictor value. The effects are usually reported versus a reference value of the predictor, centering the basis functions for this space to their corresponding transformed values \citep{cao2006}.
 
 Although prediction aids interpretation of a complex bi-dimensional DLNM, its fit is still expressed in terms of the estimated parameters of cross-basis functions obtained through the tensor product of two bases. It turns out that it is possible to reduce the expression of summaries of the association to modified parameters of one-dimensional basis functions \citep{gasparrini2012biostat}. In practice, the overall or lag-specific effects, defined in the predictor space, may be re-expressed only in terms of the one-dimensional basis functions originally chosen for that dimension. Similarly, effects along lags at specific predictor values may be reduced to parameters of the original basis functions chosen for the lag space. The reduction of the parameters is obtained through appropriate transformation matrices.
 
-The choice of the two set of basis functions for each space is perfectly independent, and should be based on a-priori assumptions or on a compromise between complexity and generalizability. Linear, threshold, strata, polynomial or splines functions can be used to define the relationship along the space of predictor, while unconstrained, strata, polynomial or splines functions can be applied to specify the shape along lags.
+The choice of the two sets of basis functions for each space is perfectly independent, and should be based on a-priori assumptions or on a compromise between complexity and generalizability. Linear, threshold, strata, polynomial or splines functions can be used to define the relationship along the space of predictor, while unconstrained, strata, polynomial or splines functions can be applied to specify the shape along lags.
 
 
 %--------------------------------%%--------------------------------%%--------------------------------%
