--- a/inst/doc/dlnmOverview.Rnw
+++ b/inst/doc/dlnmOverview.Rnw
@@ -203,9 +203,9 @@ The first two arguments of the function are \Rarg{basis} (the matrix object of c
 
 One of the main advantages of the \Rpkg{dlnm} package is that the user can perform DLNMs with standard regression functions, simply including the cross-basis matrix in the model formula. The current implementation only works with time series data, basically involving an equally-spaced and ordered predictor series, and its use is straightforward with the functions \Rfun{lm}, \Rfun{glm} or \Rfun{gam} (package \Rpkg{mgcv}). However, the user can apply different regression functions, compatibly with the time series structure of the data. Alternative use beyond time series analysis, such as in case-control or cohort designs, is in development. The function \Rfun{crosspred} exploits \Rmethod{coef} and \Rmethod{vcov} methods to extract the coefficients and related (co)variance matrix from \Rarg{model}, respectively: for classes of regression functions without these methods, the user needs to manually extract the parameters and include them in the arguments \Rarg{coef} and \Rarg{vcov}. In this case, their dimensions and order must match the variables included in \Rarg{basis}.
 
-The predictor values used for prediction are selected with the argument \Rarg{at}, or alternatively with \Rarg{from}-\Rarg{to}-\Rarg{by}. If specified by \Rarg{at}, the values are automatically ordered and made unique. If \Rarg{at} and \Rarg{by} are not provided, approximately 50 equally-spaced rounded values are returned using \Rfun{pretty}.
+The predictor values used for prediction are selected with the argument \Rarg{at}, or alternatively with \Rarg{from}-\Rarg{to}-\Rarg{by}. If specified by \Rarg{at}, the values are automatically ordered and made unique. If \Rarg{at} and \Rarg{by} are not provided, approximately 50 equally-spaced rounded values are returned using \Rfun{pretty}. The argument \Rarg{bylag} determines instead the increment of the sequence of lag values used for prediction.
 
-The function returns an object of class \Rclass{crosspred}, simply a list of objects including the vector of prediction values, coefficients and associated (co)variance matrix, matrices of lag-specific effects and standard errors for combinations of each prediction value and lag, plus vectors of overall effects (summed up along lags) and standard errors. Matrices of cumulative effects and standard errors are included for \Rcode{cumul=TRUE} (default to \Rcode{FALSE}), which represent the sum of the lag-specific effects at each lag. Exponentiated effects are added if the link of the regression model is equal to log or logit, together with confidence intervals computed using a normal approximation and a confidence level selected by \Rarg{ci.level}. The model link is automatically selected from model for classes \Rclass{lm}, \Rclass{glm}, \Rclass{gam} (package \Rpkg{mgcv}) and \Rclass{clogit} and \Rclass{coxph} (package \Rpkg{survival}), but needs to be provided through \Rarg{model.link} for different classes or if arguments \Rarg{coef}-\Rarg{vcov} are used to input the parameters.
+The function returns an object of class \Rclass{crosspred}, simply a list of objects including the vector of prediction values, coefficients and associated (co)variance matrix, matrices of lag-specific effects and standard errors for combinations of each prediction value and lag, plus vectors of overall effects (summed up along lags) and standard errors. Matrices of cumulative effects and standard errors are included for \Rcode{cumul=TRUE} (default to \Rcode{FALSE}), which represent the sum of the lag-specific effects at each lag integer. Exponentiated effects are added if the link of the regression model is equal to log or logit, together with confidence intervals computed using a normal approximation and a confidence level selected by \Rarg{ci.level}. The model link is automatically selected from model for classes \Rclass{lm}, \Rclass{glm}, \Rclass{gam} (package \Rpkg{mgcv}) and \Rclass{clogit} and \Rclass{coxph} (package \Rpkg{survival}), but needs to be provided through \Rarg{model.link} for different classes or if arguments \Rarg{coef}-\Rarg{vcov} are used to input the parameters.
 
 %--------------------------------%%--------------------------------%
 \subsection{The function \Rfun{crossreduce}}
@@ -329,10 +329,10 @@ model1 <- glm(death ~ cb1.pm + cb1.temp + ns(time, 7*14) + dow,
 The effects of specific levels of \PM{} on overall mortality, predicted by the model above, can be computed by the function \Rfun{crosspred} and saved in an object with the same class:
 
 <<example1pred>>=
-pred1.pm <- crosspred(cb1.pm, model1, at=0:20, cumul=TRUE)
+pred1.pm <- crosspred(cb1.pm, model1, at=0:20, bylag=0.2, cumul=TRUE)
 @
 
-The functions include the \Robj{basis1.pm} and \Robj{model1} objects used to estimate the parameters as the first two arguments, while \Rarg{at=0:20} states that the prediction must be computed for each integer value from 0 to 20 \microg{}. The argument \Rarg{cumul} (default to \Robj{FALSE}) indicates that also cumulative effects along lags must be included. Now that the predicted effects have been stored in \Robj{pred1.pm}, they can be plot by the methods functions described in Section~\ref{sec:plotting}. For example:
+The functions include the \Robj{basis1.pm} and \Robj{model1} objects used to estimate the parameters as the first two arguments, while \Rcode{at=0:20} states that the prediction must be computed for each integer value from 0 to 20 \microg{}. By setting \Rcode{bylag=0.2}, the prediction is computed along the lag space with an increment of 0.2. This finer grid is meant to produce a smoother curve when the results are plotted. The argument \Rarg{cumul} (default to \Robj{FALSE}) indicates that also cumulative effects along lags must be included. Now that the predicted effects have been stored in \Robj{pred1.pm}, they can be plot by the methods functions described in Section~\ref{sec:plotting}. For example:
 
 <<example1slices,fig=T,echo=F>>=
 plot(pred1.pm, "slices", var=10, col=3, ylab="RR", ci.arg=list(density=15,lwd=2),
@@ -597,7 +597,7 @@ The DLNM's framework introduced here is developed for time series design. The ge
 \section{Acknowledgements}
 \label{sec:acknowledgements}
 
-This work is supported by the Medical Research Council (UK), Research Grants RES-G0707030 and RES-G1002296.
+This work is supported by the Medical Research Council (UK), Research Grants RES-G0701030 and RES-G1002296.
 
 We gratefully acknowledge the valuable suggestions of Fabio Frascati regarding the procedures to build and document this package. Other package vignettes were used as examples (in particular \Rpkg{gnm} by Heather Turner and David Firth). The data used in the package was collected and made freely available by the NMMAPS researchers, and reproduced with their permission. We are thankful to the colleagues who tested beta-versions of this package and suggested some important improvements included in the current version (in particular Marie-France Valois, Adrian Barnett and Michela Leone).
 
